[gd_scene load_steps=6 format=3 uid="uid://b1camgr01jnyr"]

[ext_resource type="Script" path="res://Scripts/Interface.gd" id="1_exswn"]
[ext_resource type="FontFile" uid="uid://dckyd8xq5hndu" path="res://Fonts/LatoBlackItalic.ttf" id="1_mu2kt"]
[ext_resource type="Texture2D" uid="uid://b20hdts3yq1db" path="res://Textures/Background Interface/Background.png" id="2_n1pt4"]
[ext_resource type="Texture2D" uid="uid://mlshvr2uh6vf" path="res://Textures/Buttons/Ability_State_Normal.png" id="3_y8tu7"]
[ext_resource type="Texture2D" uid="uid://byuy5eihapk7u" path="res://Textures/Buttons/Ability_State_Hover.png" id="4_qb20o"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_exswn")

[node name="Abilities" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 375.0
offset_bottom = 189.0
theme_override_constants/separation = -7

[node name="UpperPanel" type="MarginContainer" parent="Abilities"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="Background" type="TextureRect" parent="Abilities/UpperPanel"]
layout_mode = 2
texture = ExtResource("2_n1pt4")
expand_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Abilities/UpperPanel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Header" type="Label" parent="Abilities/UpperPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.360784, 1)
theme_override_fonts/font = ExtResource("1_mu2kt")
theme_override_font_sizes/font_size = 50
text = "Умения"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Abilities/UpperPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="Abilities" type="HBoxContainer" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Ability1" type="TextureButton" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")
texture_hover = ExtResource("4_qb20o")

[node name="Ability2" type="TextureButton" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")
texture_hover = ExtResource("4_qb20o")

[node name="Ability3" type="TextureButton" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")
texture_hover = ExtResource("4_qb20o")

[node name="Ability4" type="TextureButton" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")
texture_hover = ExtResource("4_qb20o")

[node name="Ability5" type="TextureButton" parent="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")
texture_hover = ExtResource("4_qb20o")

[node name="BottomPanel" type="MarginContainer" parent="Abilities"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Background" type="TextureRect" parent="Abilities/BottomPanel"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("2_n1pt4")
expand_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Abilities/BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Abilities/BottomPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="Abilitiy" type="HBoxContainer" parent="Abilities/BottomPanel/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Ability" type="TextureButton" parent="Abilities/BottomPanel/HBoxContainer/MarginContainer/Abilitiy"]
layout_mode = 2
texture_normal = ExtResource("3_y8tu7")

[node name="Description" type="Label" parent="Abilities/BottomPanel/HBoxContainer/MarginContainer/Abilitiy"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.360784, 1)
theme_override_fonts/font = ExtResource("1_mu2kt")
theme_override_font_sizes/font_size = 30
text = "описание умения 1"

[connection signal="pressed" from="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities/Ability1" to="." method="_on_ability_1_pressed"]
[connection signal="pressed" from="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities/Ability2" to="." method="_on_ability_2_pressed"]
[connection signal="pressed" from="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities/Ability3" to="." method="_on_ability_3_pressed"]
[connection signal="pressed" from="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities/Ability4" to="." method="_on_ability_4_pressed"]
[connection signal="pressed" from="Abilities/UpperPanel/HBoxContainer/MarginContainer/Abilities/Ability5" to="." method="_on_ability_5_pressed"]
